--- a/css/main-style.css
+++ b/css/main-style.css
@@ -228,9 +228,12 @@ a.um_forum,
     vertical-align: bottom;
 }
 
+
+/** isključeno da bi padajući menu bio full width
 .main_nav {
     position: relative;
 }
+*/
 
 .main_nav>li>a {
     vertical-align: middle;
@@ -3734,6 +3737,40 @@ table.tabela-paketa {
     font-size: 12px;
 }
 
+
+/* - Padajuci menu - */
+
+.padajuci-sadrzaj {
+    position: absolute;
+    width: 100%;
+    margin-top: 71px;
+    background: #e9e9e9;
+    -webkit-box-shadow: 0px 15px 12px -10px rgb(50, 50, 50);
+    -moz-box-shadow: 0px 15px 12px -10px rgb(50, 50, 50);
+    box-shadow: 0px 15px 12px -10px rgb(50, 50, 50);
+    z-index: 99;
+    padding-top: 30px;
+
+    display:none;
+}
+.affix .padajuci-sadrzaj{
+    margin-top:70px;
+}
+.padajuci-submenu{
+    padding-left: 0px;
+}
+.padajuci-submenu li {
+    vertical-align: middle;
+    line-height: 30px;
+    font-family: "Raleway-Bold";
+    text-transform: uppercase;
+    font-size: 15px;
+    color: #4B69A5;
+    list-style: none;
+}
+.padajuci-submenu li a:hover,.padajuci-submenu li a:focus{
+    text-decoration:none;
+}
 
 /* - Responsive breakpoints - */
 
