--- a/css/main-style.css
+++ b/css/main-style.css
@@ -221,6 +221,7 @@ a.um_forum,
 
 .main_nav>li {
     line-height: 70px;
+    position:initial;
 }
 
 .nav>li>a {
@@ -3743,7 +3744,7 @@ table.tabela-paketa {
 .padajuci-sadrzaj {
     position: absolute;
     width: 100%;
-    margin-top: 71px;
+    left: 0;
     background: #e9e9e9;
     -webkit-box-shadow: 0px 15px 12px -10px rgb(50, 50, 50);
     -moz-box-shadow: 0px 15px 12px -10px rgb(50, 50, 50);
@@ -3754,7 +3755,7 @@ table.tabela-paketa {
     display:none;
 }
 .affix .padajuci-sadrzaj{
-    margin-top:70px;
+    margin-top:-1px;
 }
 .padajuci-submenu{
     padding-left: 0px;
