--- a/css/main-style.css
+++ b/css/main-style.css
@@ -494,6 +494,7 @@ a.um_forum,
     font-family: "Raleway-Bold";
     text-transform: uppercase;
     font-size: 15px;
+    box-shadow: 10px 0px 15px white;
 }
 
 .next-label {
@@ -4228,3 +4229,18 @@ table.tabela-paketa {
     text-align: center;
     color: #909090;
 }
+
+.ticker-vijesti{
+    height: 61px;
+    background: white;
+    flex-direction: row;
+    align-items: center;
+    padding: 0px 10px;
+}
+#ticker .item{
+        padding: 0px !important;
+    line-height: 61px !important;
+    margin-left:7px;
+}
+
+.tickercontainer{height:61px !important}
