--- a/css/main-style.css
+++ b/css/main-style.css
@@ -3916,6 +3916,10 @@ table.tabela-paketa {
     }
     .bijeli-menu {
         background: transparent;
+            padding: 0;
+    }
+    .bijeli-menu .container{
+        padding: 0;
     }
     .bijeli-menu.affix {
         background: transparent;
@@ -3937,7 +3941,7 @@ table.tabela-paketa {
         left: initial;
     }
     .person-ico {
-        display: none;
+        display: inline-block;
         width: 25px;
         margin-right: 30px;
     }
@@ -4269,4 +4273,220 @@ span#prikaziViseManje.shadeOn:before{
 }
 span#prikaziViseManje.shadeOff:before{
     background:transparent;
+}
+.user-menu-box .nav>li{
+    line-height: 80px;
+}
+.user-menu-box .nav>li.reg-button-li {
+    line-height: 100px; 
+    vertical-align: bottom;
+}
+.user-menu-box #user_icon {
+    vertical-align: middle;
+}
+.container-fluid.user-menu-box {
+    background: #00B496;
+    color: white;
+    height: 0px;
+    overflow: hidden;
+    transition: all 0.5s ease-in;
+    -webkit-box-shadow: inset 0px 15px 30px -10px rgba(0,0,0,0.5), inset 0px -15px 30px -10px rgba(0,0,0,0.5);
+    -moz-box-shadow: inset 0px 15px 30px -10px rgba(0,0,0,0.5), inset 0px -15px 30px -10px rgba(0,0,0,0.5);
+    box-shadow: inset 0px 15px 30px -10px rgba(0,0,0,0.5), inset 0px -15px 30px -10px rgba(0,0,0,0.5);
+}
+.container-fluid.user-menu-box.affix {
+    top: 100px;
+    width: 100%;
+    z-index: 999;
+}
+.user-menu-box.open{
+    height:100px;
+}
+.user-menu-box.affix.open +.container-fluid.bijeli-menu.affix {
+    top: 200px;
+}
+.user-menu-box .nav {
+    opacity: 0;
+    transition: all 0.2s ease-in-out;
+}
+.user-menu-box.open .nav {
+    opacity: 1;
+}
+.user-menu-box .nav>li>a:focus, .user-menu-box .nav>li>a:hover {
+    background: transparent;
+}
+.user-menu-box .cta-label {
+    position: relative;
+    display: inline-block;
+    padding: 10px 15px;
+    vertical-align: bottom;
+    font-family: "Raleway-Bold";
+    font-size: 13px;
+}
+.user-menu-box .nav>li>a.cta-button-reg {
+    vertical-align: middle ;
+    height: 42px;
+    line-height: 35px;
+    color: white;
+    border: 2px solid white;
+    padding: 0px 15px;
+    font-family: "Raleway-Bold";
+    font-size: 13px;
+    transition: all 0.3s ease-in-out;
+}
+
+.user-menu-box .nav>li>a.cta-button-reg:hover, .user-menu-box .nav>li>a.cta-button-reg:focus {
+    background: #21ccaf;
+    text-decoration: none;
+    color: white;
+}
+.user-menu-box .login-inputs {
+    float: right;
+    line-height: 100px;
+        text-align: right;
+}
+.user-menu-box .login-inputs .inputs-wrap{
+    display:inline-block;
+    position: relative;
+}
+
+.user-menu-box input.login-input {
+    font-family: "Roboto-Light";
+    font-size: 15px;
+    line-height: 35px;
+    border: none;
+    background: #e9e9e9;
+    color: #333;
+    padding: 0 10px;
+    outline: none;
+    margin-left: 30px;
+}
+.user-menu-box .login-bt{
+    line-height: 35px;
+    background: #222;
+    border: none;
+    font-family: "Raleway-Semibold";
+    font-size: 16px;
+    padding: 0 20px;
+    outline: none;
+    transition: all 0.3s ease;
+    margin-left: 30px;
+}
+.user-menu-box .login-bt:hover,
+.user-menu-box .login-bt:focus{
+    background:#777;
+}
+
+.legend-wrap{
+    line-height: 15px;
+    position: absolute;
+    bottom: 10px;
+    left: 30px;
+}
+
+.inputs-wrap input[type=checkbox]{
+    margin:0;
+    vertical-align:middle;
+}
+.inputs-wrap label {
+    margin-bottom: 0px;
+    vertical-align: middle;
+    font-size: 11px;
+    font-weight: 500;
+    font-family: "Roboto";
+}
+.inputs-wrap a.forgot-pass-link {
+    color: white;
+    vertical-align: middle;
+    font-size: 11px;
+    font-weight: 500;
+    font-family: "Roboto";
+    margin-left: 40px;
+}
+ 
+/* 
+***************************************
+*                                     *
+*       Login box responsivnes        *       
+*                                     *       
+***************************************
+*/
+@media (max-width: 991px){
+    .user-menu-box.affix.open +.container-fluid.bijeli-menu.affix {
+    top: 300px;
+}
+    .user-menu-box.open {
+        height: 200px;
+    }
+    .bijeli-menu {
+        height: 70px;
+    }
+    .user-menu-box .cta-label{
+        padding-left: 0px;
+    }
+}
+@media (max-width: 767px){
+    .user-menu-box.affix.open +.container-fluid.bijeli-menu.affix {
+        top: 30px;
+    }
+    .bijeli-menu{
+        height:70px;
+    }
+    .bijeli-menu path {
+        fill: #4b69a5;
+    }
+    .user-menu-box.open {
+        height: 310px;
+    }
+    .user-menu-box .login-inputs {
+        line-height: 65px;
+            display: inline-block;
+    margin: 0 auto;
+    float: none;
+    left: 0;
+    right: 0;
+    text-align: center;
+        padding-bottom: 15px;
+    }
+    .legend-wrap {
+        bottom: 5px;
+            left: calc(50% - 90px);
+    }
+    .user-menu-box .login-inputs .inputs-wrap {
+        display: block;
+    }
+    .user-menu-box input.login-input {
+        vertical-align: top;
+        margin-left: 0px;
+    }
+    .user-menu-box .cta-label {
+        padding-left:15px;
+    }
+    .user-menu-box .nav>li {
+    line-height: 25px;
+}
+    .user-menu-box .login-bt{
+        vertical-align: top;
+            margin: 15px auto;
+    }
+    .user-menu-box .nav>li.reg-button-li{
+        line-height: 25px;
+        margin: 0 0 20px;
+            display: block;
+    }
+    .user-menu-box .nav{
+        text-align: center;
+    }
+    .bijeli-menu.affix path {
+        fill: #fff;
+    }
+
+}
+@media (max-width: 480px){
+    .search_bar{
+        right: 50px;
+    }
+    .dropdown-toggle {
+        margin-right: 15px;
+    }
 }
